--- a/Proof-Of-The-Collatz-Conjecture.tex
+++ b/Proof-Of-The-Collatz-Conjecture.tex
@@ -82,7 +82,7 @@ splitbottomskip=6pt,splittopskip=12pt]
 
 \maketitle
 
-	The Collatz conjecture is a conjecture in mathematics that concerns a sequence defined as follows: For any positive integer, if even, the next term is one half of it. If the previous term is odd, the next term is 3 times the previous term plus 1. The conjecture is that no matter what starting value, the sequence will always reach 1. In modular arithmetic notation, the sequence is defined as follows:
+	The Collatz conjecture is a mathematical problem that concerns a sequence defined as follows: For any positive integer, if even, the next term is one half of it. If the previous term is odd, the next term is 3 times the previous term plus 1. The conjecture is that no matter what starting value, the sequence will always reach 1. In modular arithmetic notation, the sequence is defined as follows:
 	
 	\[
 	f(n) = 
@@ -92,8 +92,8 @@ splitbottomskip=6pt,splittopskip=12pt]
 	\end{cases}
 	\]
 	
-    Let suppose that all odd positive integers less than $M$ satisfy the Collatz conjecture. Therefore, proving or denying the conjecture simply comes in proving that the sequence will always or not give an odd positive integer less than the starting value $M$. This paper used such approach to validate the Collatz's conjecture.\\
-	
+    Let suppose that all odd positive integers less than $M$ satisfy the Collatz conjecture. Therefore, proving or denying the conjecture simply comes in proving that the sequence will always or not give an odd positive integer less than the starting value $M$. This paper used such approach to validate the Collatz conjecture.\\
+
 \begin{lemma}
     Assuming that proving the conjecture comes in showing that the sequence always gives a value less than its initial value, all odd natural numbers except one converge to one under the Collatz sequence.
 \end{lemma}
@@ -107,36 +107,101 @@ splitbottomskip=6pt,splittopskip=12pt]
     %
     where $s_{1} \in N^{*}$, $s_{2} \in N$, $t \in N $ and $6\nmid t$. Assuming that $s_{1} \geq 2$, let implement the Collatz sequence using $M$.
     \begin{align}
-        E_{1} &= \frac{3M+1}{4}= (2^{s_{1}-2}~3^{s_{2}+ 1}~t) + 1
+        E_{0} & = M = (2^{s_{1}}~3^{s_{2}}~t) +1 \\
+        E_{1} &= \frac{3E_{0}+1}{4}= (2^{s_{1}-2}~3^{s_{2}+ 1}~t) + 1
         \\
         E_{2} &= \frac{3E_{1}+1}{4} = (2^{s_{1}-4}~3^{s_{2}+ 2}~t) + 1 
         \\
-        E_{n} &= \frac{3E_{n-1}+1}{4} = (2^{s_{1}-2n}~3^{s_{2}+ n}~t) + 1
+        \vdots
+        \\
+        \text{Therefore, } ~E_{n} &= \frac{3E_{n-1}+1}{4} = (2^{s_{1}-2n}~3^{s_{2}+ n}~t) + 1
     \end{align}
+    This sequence stops whenever $s_{1}-2n = 0$ or $s_{1}-2n=1$. \\
     
-    Let first assume that $2 \mid s_{1}$. Thus, $ 2 \mid E_{n} \text{ if } s_{1} = 2n$. Hence, 
+    Let first assume that $2 \mid s_{1}$. Thus, $ 2 \mid E_{n} \text{ if } s_{1} = 2n$ and
     \begin{equation}
         E_{\frac{s_{1}}{2}} = (3^{s_{2}+\frac{s_{1}}{2}}.~t) + 1 
     \end{equation}
-    
-     Since for $s_{1}\geq 2$, $~2^{s_{1}} > 3^{\frac{s_{1}}{2}}$ then, 
+     Since for $s_{1}\geq 2$, $ ~2^{s_{1}} >~ 3^{\frac{s_{1}}{2}}$ then, 
     \begin{align}
         2^{s_{1}}~3^{s_{2}} &> 3^{s_{2}+\frac{s_{1}}{2}} \\
         (2^{s_{1}}~3^{s_{2}}~t)+1 &> (3^{s_{2}+\frac{s_{1}}{2}}~t)+1 \\
-        M &> E_{\frac{s_{1}}{2}}
+        \text{thus, ~} M &> E_{\frac{s_{1}}{2}}
     \end{align}
-    Therefore, if $2\mid s_{1}$, the collatz sequence will always give an odd positive integer less than the starting value. In other words, $\forall s_{1} \in N^{*}$ such that $2\mid s_{1}$, $(2^{s_{1}}~3^{s_{2}}~t)+1$ is always convergent.\\ 
+    Therefore, if $2\mid s_{1}$, the collatz sequence will always give an odd positive integer less than the starting value. In other words, $\forall s_{1} \in N^{*}$ such that $2\mid s_{1}$, $(2^{s_{1}}~3^{s_{2}}~t)+1$ is always convergent. Let define $F = \frac{E_{\frac{s_{1}}{2}}}{2^{m}}$, where $m$ gives the highest power of two dividing $E_{\frac{s_{1}}{2}}$. It is observed that if $3^{s_{2}+\frac{s_{1}-2}{2}}t \equiv 3 \pmod{4}$, then $F\equiv 5 \pmod{6}$.
+    \begin{equation}
+       F\equiv 5 \pmod{6} \Leftrightarrow F = 6k+5=(2^{1}.~3^{0}.(3k+2))+1
+    \end{equation}
+    Since $M> E_{\frac{s_{1}}{2}} >F$, then $F$ converges. Therefore, $\forall k \in N$,  any odd positive integer of the form $(2^{1}.~3^{0}.(3k+2))+1$ converges.\\ 
     
-    Now, let assume that $2\nmid s_{1}$. Thus, $s_{1}-2n=1$ gives
+    Now, let assume that $2\nmid s_{1}$. Thus, $s_{1}-2n=1$, which gives
     \begin{equation}
         E_{\frac{s_{1}-1}{2}} = (2.~3^{s_{2}+\frac{s_{1}-1}{2}}.~t)+1
     \end{equation}
-    Since for $s_{1}\geq 2$, ~ $2^{s_{1}}> 2.3^{\frac{s_{1}-1}{2}}$ then,
+    Since for $s_{1}\geq 2$, ~ $2^{s_{1}}> 2.3^{\frac{s_{1}-1}{2}}$ thus,
     \begin{align}
         2^{s_{1}}3^{s_{2}} &> 2.3^{s_{2}+\frac{s_{1}-1}{2}} \\
         (2^{s_{1}}3^{s_{2}}t)+1 &> (2.~3^{s_{2}+\frac{s_{1}-1}{2}}.~t)+1\\
-        M &> E_{\frac{s_{1}-1}{2}}
+        \text{thus, ~} M &> E_{\frac{s_{1}-1}{2}}
     \end{align}
-    Therefore, if $2\nmid s_{1}$, the collatz sequence will always give an odd positive integer less than the starting value.Since $ M > E_{\frac{s_{1}-1}{2}}$ implies that $M$ converges to one, then $E_{\frac{s_{1}-1}{2}}$  must also be convergent to one. In other words, all odd positive integers of the form $(2^{1}~3^{m}~t)+1$ are always convergent under the Collatz sequence. Therefore, $\forall s_{1} \in N^{*}$ such that $2\nmid s_{1}$, $(2^{s_{1}}.~3^{s_{2}}.~t)+1$ is always convergent.\\
-\end{proof}
+    
+    Therefore, if $2\nmid s_{1}$, the collatz sequence will always give an odd positive integer less than the starting value.Since $ M > E_{\frac{s_{1}-1}{2}}$ implies that $M$ converges to one, then $E_{\frac{s_{1}-1}{2}}$  must also be converging to one. In other words, for $2\nmid s_{1}$, any positive odd integer with ($s_{1}>0 \text{ and } s_{2}>0$) or ($s_{1}>1 \text{ and } s_{2}\geq 0$) are always convergent. Let define 
+    \begin{equation}
+        F = \frac{(3E_{\frac{s_{1}-1}{2}})+1}{2} =  (3^{s_{2}+\frac{s_{1}+1}{2}}.~t)+2
+    \end{equation}
+    which could also be expressed as, 
+    \begin{equation}
+        F  = 3^{1}(3^{s_{2}+\frac{s_{1}-1}{2}}.~t+1)-1 = (2^{m}.~3^{0}.~q)+1
+    \end{equation}
+    where $m>0$ and $6\nmid q$. Using the same tokens as before, if $(3^{s_{2}+\frac{s_{1}-1}{2}}.~t) \equiv 3 \pmod{4}$, then $q \equiv 5 \pmod{6}$. Let say that $q = 3k+2$, thus 
+    \begin{equation}
+        F = (2^{m}.~3^{0}.~(3k+2))+1
+    \end{equation}
+    We have already shown early that $F$ converges by essence. Now if $(3^{s_{2}+\frac{s_{1}-1}{2}}.~t) \equiv 1 \pmod{8}$, then $q \equiv 1 \pmod{6}$. Let say that $q = 3k-2$, thus 
+    \begin{equation}
+        F = (2^{m}.~3^{0}.~(3k-2))+1
+    \end{equation}
+    It observed that for $s_{1}\geq 5$, 
+    \begin{equation}
+        M> F > E_{\frac{s_{1}-1}{2}}
+    \end{equation}
+    Since for $s_{1}\geq 2$, $M$ converges and $F$ is a term of the Collatz's sequence, then $F$ also converges for $s_{1}\geq 2$. Therefore, any odd positive integer of the form $(2^{m}.~3^{0}.~(3k-2))+1$ must always converges. This is the end of the proof.\\
+    
+    \textbf{Extra:} \\
+    
+    Since $6\nmid t$, then $t = 2^{s_{1}}.~3^{s_{2}}.~q \pm 1$, where $s_{1}>0$, $s_{2}>0$ and $6\nmid q$. Hence, 
+    \begin{align}
+        F = 2t+1 = \begin{cases}
+         (2^{s_{1}+1}.~3^{s_{2}}.~q) - 1 \\
+         3^{1}( (2^{s_{1}+1}.~3^{s_{2}-1}.~q) + 1)
+        \end{cases}
+    \end{align}
+    Let say that $ M = (2^{s_{1}+1}.~3^{s_{2}}.~q) - 1$. We also define the following Collatz sequence:\\
+    \begin{align}
+        D_{0} & = F  \\
+        D_{1} &= \frac{3D_{0}+1}{2}= (2^{s_{1}}. ~3^{s_{2}+1}. ~q) - 1
+        \\
+        D_{2} &= \frac{3D_{1}+1}{2} = (2^{s_{1}-1}. ~3^{s_{2}+2}. ~q) - 1 
+        \\
+        \vdots
+        \\
+        \text{Therefore, } ~D_{n} &= \frac{3D_{n-1}+1}{2} = (2^{s_{1}-n+1}. ~3^{s_{2}+ n}. ~q) - 1
+    \end{align}
+        This sequence stops whenever $s_{1}= n-1$. It then follows that, 
+        \begin{equation}
+            D_{s_{1}+1} = (3^{s_{1}+s_{2}+1}.~q)-1
+        \end{equation}
+        If $D_{s_{1}+1} = 2^{u}$, then $u \equiv 1 \pmod{2}$ and $u \equiv 0 \pmod{3^{s_{1}+s_{2}}}$. Let say that $u = 3^{s_{1}+s_{2}}\nu$, where $2 \nmid \nu$. Thus, 
+        \begin{equation}
+            D_{s_{1}+1} = (3^{s_{1}+s_{2}+1}.~q)-1 = 2^{u}= 2^{(3^{s_{1}+s_{2}})\nu} \Rightarrow q = \frac{2^{(3^{s_{1}+s_{2}})\nu}+1}{3^{s_{1}+s_{2}+1}}
+        \end{equation}  
+        Since $3\nmid q$, then $3\nmid \nu $.\\
+ 
+\end{proof} 
+
+
+
+
+
+
 \end{document}
